Layer Selection Z-Index fix

--- a/client/main.scss
+++ b/client/main.scss
@@ -108,6 +108,7 @@ body {
         display: flex;
         align-items: flex-end;
         position: absolute;
+        z-index: 9999;
         bottom: 0;
         left: 10px;
         padding: 10px;
